[package]
name = "bgg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
# tokio = { version = "1", features = ["full"] }
csv = "1.1.6"
anyhow = "1.0.51"
chrono = "0.4.19"
dirs = "4.0.0"
log = "0.4.14"
simple_logger = "1.16.0"
serde = "1.0.133"
serde_derive = "1.0.133"